Acrescenta rotas put e patch para atualizar cripto e cotacao de cripto
