# cotacao-crypto-api/src/controllers/CriptomoedaController.ts
@@ -1,6 +1,8 @@
-import { Body, Path, Get, Post, Delete, Route } from 'tsoa';
-import { CreateCriptomoedaDTO } from '../dto/CreateCriptomoedaRequestDTO';
+import { Body, Path, Put, Patch, Get, Post, Delete, Route } from 'tsoa';
 import { CriptomoedaDTO } from '../dto/CriptomoedaDTO';
+import { CreateCriptomoedaDTO } from '../dto/CreateCriptomoedaRequestDTO';
+import { UpdateCriptomoedaDTO } from '../dto/UpdateCriptomoedaRequestDTO';
+import { UpdateCotacaoCriptomoedaDTO } from '../dto/UpdateCotacaoCriptomoedaRequestDTO';
 import CreateUpdateCriptomoedaService from "../services/CreateUpdateCriptomoedaService";
 
 const { criptomoedasRepository } = require('../loaders/CarregarCriptomoedasRepository');
@@ -37,6 +39,38 @@ class CriptomoedaController {
   @Delete("/:codigo")
   public async destroy(@Path() codigo: string): Promise<boolean> {
     return criptomoedasRepository.delete(codigo);
+  }
+
+  @Put("/:codigo")
+  public async update(@Path() codigo: string, @Body() requestBody: UpdateCriptomoedaDTO): Promise<CriptomoedaDTO | null> {
+    const { nome, descricao, cotacao_compra, cotacao_venda, variacao } = requestBody;
+
+    const criptomoedaExistente = criptomoedasRepository.findByCodigo(codigo);
+
+    return (criptomoedaExistente != null) ?
+      criptomoedasRepository.update(criptomoedaExistente, {
+        nome,
+        descricao,
+        cotacao_compra,
+        cotacao_venda,
+        variacao
+      }) :
+      null;
+  }
+
+  @Patch("/:codigo")
+  public async updateCotacao(@Path() codigo: string, @Body() requestBody: UpdateCotacaoCriptomoedaDTO): Promise<CriptomoedaDTO | null> {
+    const { cotacao_compra, cotacao_venda, variacao } = requestBody;
+
+    const criptomoedaExistente = criptomoedasRepository.findByCodigo(codigo);
+
+    return (criptomoedaExistente != null) ?
+      criptomoedasRepository.updateCotacao(criptomoedaExistente, {
+        cotacao_compra,
+        cotacao_venda,
+        variacao
+      }) :
+      null;
   }
 }
 
