# cotacao-crypto-api/src/dto/UpdateCotacaoCriptomoedaRequestDTO.ts
@@ -1,0 +1,7 @@
+export interface UpdateCotacaoCriptomoedaDTO {
+  cotacao_compra: number;
+  cotacao_venda: number;
+  variacao: number;
+}
+
+
