# cotacao-crypto-api/src/dto/UpdateCriptomoedaRequestDTO.ts
@@ -1,4 +1,6 @@
 export interface UpdateCriptomoedaDTO {
+  nome: string;
+  descricao: string;
   cotacao_compra: number;
   cotacao_venda: number;
   variacao: number;
